--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 python-dotenv==1.0.1
-chromadb==0.5.18
+PyYAML==6.0.2
+langchain==0.3.7
 langchain-core==0.3.15
 langchain-google-genai==2.0.1
-PyYAML==6.0.2
+google-generativeai==0.8.5
+chromadb[all]==0.5.18
